# DescObs

./: .Rbuildignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  README.md  appveyor.yml
R/: BootCoefQuartVar.R  BootCoefVar.R  CoefQuartVar.R  CoefQuartVarCI.R  CoefVar.R  CoefVarCI.R  CoefVar_example.R  QuantIndex.R  QuantileRescale.R  SampleQuantiles.R  cqv.R  cqv_versatile.R  cv.R  cv_versatile.R  pack.R  rm.versatile.R  rm_versatile.R  shortest_length.R  x.R
examples/: BootCoefQuartVar.R  BootCoefVar.R  CoefQuartVar.R  CoefQuartVarCI.R  CoefVar.R  CoefVarCI.R  QuantIndex.R  SampleQuantiles.R  cqv.R  cv.R  rm.versatile.R
man/: BootCoefQuartVar.Rd  BootCoefVar.Rd  CoefQuartVar.Rd  CoefQuartVarCI.Rd  CoefVar.Rd  CoefVarCI.Rd  QuantIndex.Rd  QuantileRescale.Rd  SampleQuantiles.Rd  cqv.Rd  cqv_versatile.Rd  cv.Rd  cv_versatile.Rd  rm.versatile.Rd  rm_versatile.Rd
src/: CMakeLists.txt
tests/: testthat.R
tests/testthat/: test_state_BootCoefQuartVar.R  test_state_BootCoefVar.R  test_state_CoefQuartVar.R  test_state_CoefQuartVarCI.R  test_state_CoefVarCI.R  test_state_SampleQuantiles.R  test_state_cqv_versatile.R  test_state_cv_versatile.R  test_state_digits.R  test_state_na_rm.R  test_state_probs.R  test_state_rm_versatile.R  test_state_type.R  test_state_x.R
tmp/: .gitignore  1.Rmd  CoefQuartVar_example.R  DescObs.bib  SampleQuantiles_example.R  config.R.example  cqv_versatile_example.R  cv.Rmd  cv.html  cv_prime.R  cv_versatile_example.R  rm_versatile_example.R
vignettes/: cqv.Rmd  cqv_versatile.Rmd  cv.Rmd  cv_versatile.Rmd  rm.versatile.Rmd  rm_versatile.R  rm_versatile.Rmd  rm_versatile.html
